<resources>
    <string name="app_name">Wikipedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_wikipedia">Search Wikipedia</string>
    <string name="search">Search</string>
    <string name="clear_history">Clear History</string>
    <string name="language">Language</string>
    <string name="history">History</string>
    <string name="bookmark">Bookmark</string>
    <string name="donate">Donate</string>
    <string name="login">Login</string>
    <string name="search_term">Search term</string>
    <string name="go_back">Back to main page\n</string>
    <string name="save_language">Save Language</string>
    <string name="more">More\n</string>
    <string name="this_is_the_save_fragment">This is the Save Fragment</string>
    <string name="save">Save\n</string>
    <string name="save_article">Save Article\n</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="setting">Setting</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="bookmark_title">Bookmark Title</string>
    <string name="article_title">Article Title</string>
    <string name="empty">Empty</string>
    <string name="clear_all">Clear All</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password: </string>
    <string name="enter_username">Enter username</string>
    <string name="username">Username: </string>
    <string name="join_wikipedia">Join Wikipedia</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="save_change">Save change</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="custom_amount">Custom amount</string>
    <string name="_20">20$</string>
    <string name="_10">10$</string>
    <string name="_5">5$</string>
    <string name="select_a_donation_amount">Select a donation amount:</string>
    <string name="search_bar">Search bar:</string>
    <string name="enter_some_keywords">Enter some keywords</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email: </string>
    <string name="date_of_birth">Date of Birth: </string>
    <string name="age">Age: </string>
    <string name="name">Name: </string>
    <string name="reset_password">Reset Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back_to_explore">Back to Explore</string>
    <string name="show_article">Show Article</string>
    <string name="delete_bookmark">Delete bookmark\n</string>
    <string name="select_language">Select language</string>
    <string name="back_to_setting">Back to Setting</string>
    <string name="guest">Guest</string>
    <string name="account_information">Account Information</string>
    <string name="phone">Phone:</string>
    <string name="gender">Gender:</string>
    <string name="register">Register</string>
    <string name="save_profile">Save Profile</string>
    <string name="donation_amount">Donation Amount</string>
    <string name="choose_your_payment_method">Choose Your Payment Method</string>
    <string name="binance_payment">Binance Payment</string>
    <string name="binance">Binance</string>
    <string name="mastercard_payment">MasterCard Payment</string>
    <string name="mastercard">MasterCard</string>
    <string name="stripe_payment">Stripe Payment</string>
    <string name="stripe">Stripe</string>
    <string name="paypal_payment">PayPal Payment</string>
    <string name="paypal">Paypal</string>
    <string name="applepay_payment">ApplePay Payment</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="payment">Payment</string>
    <string name="new_password">New Password:</string>
    <string name="delete_history">Delete history</string>
    <string name="history_title">History Title</string>
    <!-- Language options -->
    <string-array name="language_array">
        <item>English</item>
        <item>Tiếng Việt</item>
        <item>Français</item>
        <item>Deutsch</item>
        <item>Español</item>
        <item>日本語</item>
        <item>中文</item>
        <item>한국어</item>
        <item>Italiano</item>
        <item>Português</item>
        <item>Русский</item>
        <item>عربى</item>
        <item>Türkçe</item>
        <item>Polski</item>
        <item>ไทย</item>
        <item>Swedish</item>
        <item>Danish</item>
        <item>Norsk</item>
        <item>Finnish</item>
        <item>Hrvatski</item>
        <item>Slovenský</item>
        <item>Magyar</item>
    </string-array>
    <!-- Array for Day -->
    <string-array name="day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <!-- Array for Month -->
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Array for Gender -->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>