<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_nav"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/login_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/setting"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/close_login_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/close"
            android:src="@drawable/close_button"
            android:background="@android:color/transparent"
            app:tint="@color/grey" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_to_your_account"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white_nav"
                android:gravity="start|center"
                android:text="@string/join_wikipedia"
                android:textColor="@color/blue_nav"
                android:background="@android:color/transparent"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/username"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white_nav"
            android:gravity="start|center"
            android:text="@string/forgot_your_password"
            android:background="@android:color/transparent"
            android:textColor="@color/blue_nav"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/grey"
            android:text="@string/login" />

    </LinearLayout>
</LinearLayout>