<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_nav"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/login_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/setting"
            android:gravity="center_vertical"
            android:text="@string/forgot_password"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/close_forgot_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/close"
            android:src="@drawable/close_button"
            app:tint="@color/grey" />
    </RelativeLayout>


    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/new_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        android:text="@string/reset_password" />

</LinearLayout>
