<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <WebView
        android:id="@+id/article_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:contentDescription="@string/go_back"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:id="@+id/bookmark_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bookmark_outline"
        android:contentDescription="@string/bookmark"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/save_button"
        android:contentDescription="@string/save_article"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/bookmark_button"
        android:layout_marginTop="16dp" />
</RelativeLayout>
