<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_nav"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/language_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/setting"
            android:gravity="center_vertical"
            android:text="@string/language"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/close_language_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/close"
            android:src="@drawable/close_button"
            app:tint="@color/grey" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/language_array" />

    <Button
        android:id="@+id/save_language_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/save_change" />
</LinearLayout>
